--- a/new_va_majority_map.html
+++ b/new_va_majority_map.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+<body>
+<strong><font FACE="arial" size = 6>DAPA/DACA Outreach Targeting</font></strong>
+</body>  
   <style>
     #map-canvas { width:2000px; height:800px; }
     .layer-wizard-search-label { font-family: sans-serif };
