--- a/new_va_majority_map.html
+++ b/new_va_majority_map.html
@@ -90,10 +90,10 @@
 #grad1 {
     height: 20px;
     width: 300px;
-    background: -webkit-linear-gradient(left, rgba(247,252,253,1) , rgba(77,0,75,1)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(right, rgba(247,252,253,1), rgba(77,0,75,1)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(right, rgba(247,252,253,1), rgba(77,0,75,1)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to right, rgba(247,252,253,1) , rgba(77,0,75,1)); /* Standard syntax (must be last) */
+    background: -webkit-linear-gradient(left, rgba(247,252,253,1), rgba(147,166,207,1), rgba(77,0,75,1)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, rgba(247,252,253,1), rgba(147,166,207,1), rgba(77,0,75,1)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, rgba(247,252,253,1), rgba(147,166,207,1), rgba(77,0,75,1)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, rgba(247,252,253,1), rgba(147,166,207,1), rgba(77,0,75,1)); /* Standard syntax (must be last) */
 
 }
 </style>
