--- a/new_va_majority_map.html
+++ b/new_va_majority_map.html
@@ -2,72 +2,8 @@
 <html>
   <head>
 <body>
-<strong><font FACE="arial" size = 6>DAPA/DACA Outreach Targeting</font></strong>
-</body>  
-  <style>
-    #map-canvas { width:1200px; height:450px; }
-    .layer-wizard-search-label { font-family: sans-serif };
-}
-
-  </style>
-  <script type="text/javascript"
-    src="http://maps.google.com/maps/api/js?sensor=false">
-  </script>
-  <script type="text/javascript">
-    var map;
-    var layer_1;
-    var layer_0;
-    function initialize() {
-      map = new google.maps.Map(document.getElementById('map-canvas'), {
-        center: new google.maps.LatLng(37.8377834703127, -78.6020606757813),
-        zoom: 7,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
-      });
-      layer_1 = new google.maps.FusionTablesLayer({
-        query: {
-          select: "col0",
-          from: "1IObSgtX5OgK_E2DXtRhA409hkCjtVVoMupfmdSBw",
-          where: " col4 >= 0 and col4 <= 0.13"
-        },
-        map: map,
-        styleId: 2,
-        templateId: 2
-      });
-      layer_0 = new google.maps.FusionTablesLayer({
-        query: {
-          select: "col3",
-          from: "1tgoBdz9IUDRlLhOc5FR7CWdObyBjacYyAZF0wZIt",
-          where: " col1 in (' None', 'Library', 'Church', 'Government', 'School')"
-        },
-        map: map,
-        styleId: 2,
-        templateId: 2
-      });
-    }
-    function changeMap_0() {
-      var whereClause = " col1 in (' None', 'Library', 'Church', 'Government', 'School')";
-      var searchString = document.getElementById('search-string_0').value.replace(/'/g, "\\'");
-      if (searchString != '--Select--') {
-        whereClause += " AND 'FEATTYPE' = '" + searchString + "'";
-      }
-      layer_0.setOptions({
-        query: {
-          select: "col3",
-          from: "1tgoBdz9IUDRlLhOc5FR7CWdObyBjacYyAZF0wZIt",
-          where: whereClause
-        }
-      });
-    }
-    google.maps.event.addDomListener(window, 'load', initialize);
-  </script>
-  </head>
-  <body>
-
-
-    <div id="map-canvas"></div>
-
-  <div id="grad1"></div>
-  <small><FONT FACE="arial"><strong>Low Value Area-----------------------High Value Area</strong></FONT></small>
+<strong><font FACE="arial" size = 6>DAPA/DACA Outreach Targeting</font></strong> 
+<div id="grad1"></div> <small><FONT FACE="arial"><strong>Low Value Area-----------------------High Value Area</strong></FONT></small>
   
 
     <div style="margin-top: 10px;">
@@ -98,7 +34,76 @@
 }
 </style>
 </head>
-<body>
 
+
+</body>  
+
+  <style>
+    html, body {
+        width: 100%;
+        height: 100%;
+            }
+
+    #map-canvas { width:100%; height:85%; }
+    .layer-wizard-search-label { font-family: sans-serif };
+
+  </style>
+  <script type="text/javascript"
+    src="http://maps.google.com/maps/api/js?sensor=false">
+  </script>
+  <script type="text/javascript">
+    var map;
+    var layer_1;
+    var layer_0;
+    function initialize() {
+      map = new google.maps.Map(document.getElementById('map-canvas'), {
+        center: new google.maps.LatLng(37.8377834703127, -78.6020606757813),
+        zoom: 7,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+      });
+      layer_1 = new google.maps.FusionTablesLayer({
+        query: {
+          select: "col0",
+          from: "1IObSgtX5OgK_E2DXtRhA409hkCjtVVoMupfmdSBw",
+          where: " col4 >= 0 and col4 <= 0.13"
+        },
+        map: map,
+        styleId: 2,
+        templateId: 2
+      });
+      layer_0 = new google.maps.FusionTablesLayer({
+        query: {
+          select: "col3",
+          from: "1tgoBdz9IUDRlLhOc5FR7CWdObyBjacYyAZF0wZIt",
+          where: " col1 not in (' None', 'Library', 'Church', 'Government', 'School')"
+        },
+        map: map,
+        styleId: 2,
+        templateId: 2
+      });
+    }
+    function changeMap_0() {
+      var whereClause = " col1 in (' None', 'Library', 'Church', 'Government', 'School')";
+      var searchString = document.getElementById('search-string_0').value.replace(/'/g, "\\'");
+      if (searchString != '--Select--') {
+        whereClause += " AND 'FEATTYPE' = '" + searchString + "'";
+      }
+      layer_0.setOptions({
+        query: {
+          select: "col3",
+          from: "1tgoBdz9IUDRlLhOc5FR7CWdObyBjacYyAZF0wZIt",
+          where: whereClause
+        }
+      });
+    }
+    google.maps.event.addDomListener(window, 'load', initialize);
+  </script>
+  </head>
+  <body>
+
+
+    <div id="map-canvas"></div>
+
+  
 </body>
 </html>
