--- a/iamerica_co_targeting_map.html
+++ b/iamerica_co_targeting_map.html
@@ -36,6 +36,49 @@
     width: 100%;
     height: 100%;
         }
+  #legend {
+        background: #FFF;
+        padding: 10px;
+        margin: 5px;
+        font-size: 12px;
+        font-family: Arial, sans-serif;
+      }
+
+      .color {
+        border: 1px solid;
+        height: 12px;
+        width: 12px;
+        margin-right: 3px;
+        float: left;
+      }
+
+      .red {
+        background: #D55;
+      }
+
+      .brown {
+        background: #DA6;
+      }
+      .purple {
+        background: #FAF;
+      }
+
+      .yellow {
+        background: #FFA;
+      }
+
+      .green {
+        background: #AFA;
+      }
+
+      .blue {
+        background: #AAF;
+      }
+
+      .white {
+        background: #FFF;
+      }
+            
   #grad1 {
     height: 20px;
     width: 300px;
@@ -80,6 +123,23 @@
         styleId: 2,
         templateId: 2
       });
+
+       // Create the legend and display on the map
+        var legend = document.createElement('div');
+        legend.id = 'legend';
+        var content = [];
+        content.push('<h3>Landmarks</h3>');
+        content.push('<p><div class="color green"></div>School</p>');
+        content.push('<p><div class="color yellow"></div>Library</p>');
+        content.push('<p><div class="color purple"></div>College</p>');
+        content.push('<p><div class="color blue"></div>Hospital</p>');
+        content.push('<p><div class="color brown"></div>Government</p>');
+        content.push('<p><div class="color red"></div>Place of Worship</p>');
+        content.push('<p><div class="color white"></div>Retail</p>');
+
+        legend.innerHTML = content.join('');
+        legend.index = 1;
+        map.controls[google.maps.ControlPosition.RIGHT_BOTTOM].push(legend);
     }
     function changeMap_0() {
       var whereClause = " col8 in ('dapa_daca', 'latino_vr')";
