--- a/iamerica_va_targeting_map.html
+++ b/iamerica_va_targeting_map.html
@@ -36,22 +36,23 @@
     width: 100%;
     height: 100%;
         }
-   #legend {
+    #legend {
+        width:110px;
         background: #FFF;
         padding: 10px;
-        margin: 5px;
+        margin: 20px;
         font-size: 12px;
         font-family: Arial, sans-serif;
       }
 
       .color {
+        border-radius: 50%/50%; 
         border: 1px solid;
-        height: 12px;
-        width: 12px;
-        margin-right: 3px;
+        height: 8px;
+        width: 8px;
+        margin-right: 2px;
         float: left;
       }
-
       .red {
         background: #D55;
       }
