--- a/lvp_mapping_tool_2014.html
+++ b/lvp_mapping_tool_2014.html
@@ -53,7 +53,7 @@ body { margin:0; padding:0; }
     <span style='background:rgba(141,160,203,0.6);'></span><small>Minority Hispanic, Hispanic Representation</small> 
     <small>Source: <a href="http://neworganizing.com/">The New Organizing Institute</a></small>
 
-    <img src="https://lh4.googleusercontent.com/N4pT37cOJU-Pl5mfZPmyhBvdPa9_1l6K53JQiYqiVvY28z3o2hJx9O6_2wxvyvB_6Y8aa3UQh6rI92k=w1896-h847" style = "float:right;width:50%; height:40px">
+    <img src="https://media.licdn.com/media/p/3/005/00b/2f2/151565f.png" style = "float:right;width:50%; height:50px">
 </div>
         
         
