updated label rendering

--- a/lvp_mapping_tool_2014.html
+++ b/lvp_mapping_tool_2014.html
@@ -65,6 +65,7 @@ body { margin:0; padding:0; }
 
   L.mapbox.tileLayer('bluelabs.lakmg8n8').addTo(map);
   L.mapbox.tileLayer('bluelabs.a9543637').addTo(map);
+
   //Legend
   map.legendControl.addLegend(document.getElementById('legend').innerHTML);
 
@@ -88,14 +89,14 @@ body { margin:0; padding:0; }
 
 
 
-  var ui = document.getElementById('map-ui');
+  //var ui = document.getElementById('map-ui');
 
   var cd_labels = L.mapbox.tileLayer('bluelabs.lo09ej13');
   //var county_labels = L.mapbox.tileLayer('bluelabs.le33gbf6');
   //var slu_labels = L.mapbox.tileLayer('bluelabs.le33bh27');
   //var sll_labels = L.mapbox.tileLayer('bluelabs.le33klcl');
 
-  addLayer(cd_labels, L.mapbox.gridLayer('bluelabs.le336kch'),'cd_labels', 1);
+  addLayer(cd_labels, L.mapbox.gridLayer('bluelabs.ozoj38fr'),'cd_labels', 1);
   //addLayer(county_labels, L.mapbox.gridLayer('bluelabs.le33gbf6'),'county_labels', 2);
   //addLayer(slu_labels, L.mapbox.gridLayer('bluelabs.le33bh27'),'slu_labels', 3);
   //addLayer(sll_labels, L.mapbox.gridLayer('bluelabs.le33klcl'),'sll_labels', 4);
