full stories + label fixes

--- a/lvp_mapping_tool_2014.html
+++ b/lvp_mapping_tool_2014.html
@@ -78,7 +78,7 @@ body { margin:0; padding:0; }
      // 'Upper State Legislative Districts': L.mapbox.tileLayer('bluelabs.0e6e6045'),
      // 'Lower State Legislative Districts': L.mapbox.tileLayer('bluelabs.1622a09b')
   }, {
-      'Hispanic Representation in Congressional Districts': L.mapbox.tileLayer('bluelabs.c7d83ef0').addTo(map),
+      'Hispanic Representation in Congressional Districts': L.mapbox.tileLayer('bluelabs.f771de07').addTo(map),
       'Districts with Hispanic or Latino Candidates in 2014': L.mapbox.tileLayer('bluelabs.lpj3eai4'),
       //'Hispanic Representation in Counties': L.mapbox.tileLayer('bluelabs.2e3684bc'),
       //'Hispanic Representation in Upper State Legislative Districts': L.mapbox.tileLayer('bluelabs.2eab0320'),
@@ -97,8 +97,8 @@ body { margin:0; padding:0; }
   //var slu_labels = L.mapbox.tileLayer('bluelabs.le33bh27');
   //var sll_labels = L.mapbox.tileLayer('bluelabs.le33klcl');
 
-  addLayer(cd_labels, L.mapbox.gridLayer('bluelabs.ozoj38fr'),'cd_labels', 1);
-  addLayer(cd_stories, L.mapbox.gridLayer('bluelabs.vqcfecdi'), 'cd_stories', 2);
+  addLayer(cd_labels, L.mapbox.gridLayer('bluelabs.y2l6jemi'),'cd_labels', 1);
+  addLayer(cd_stories, L.mapbox.gridLayer('bluelabs.701cerk9'), 'cd_stories', 2);
   //addLayer(county_labels, L.mapbox.gridLayer('bluelabs.le33gbf6'),'county_labels', 2);
   //addLayer(slu_labels, L.mapbox.gridLayer('bluelabs.le33bh27'),'slu_labels', 3);
   //addLayer(sll_labels, L.mapbox.gridLayer('bluelabs.le33klcl'),'sll_labels', 4);
