--- a/lvp_mapping_tool.html
+++ b/lvp_mapping_tool.html
@@ -127,7 +127,7 @@ L.control.layers({
   //addLayer(cd_stories, L.mapbox.gridLayer('bluelabs.701cerk9'), 'cd_stories', 2);
   addLayer(slu_labels, L.mapbox.gridLayer('bluelabs.mk7o76fb'),'slu_labels', 2);
   addLayer(sll_labels, L.mapbox.gridLayer('bluelabs.mk2j4298'),'sll_labels', 3);
-  addLayer(county_labels, L.mapbox.gridLayer('bluelabs.mk3i2p28'),'county_labels', 4);
+  addLayer(county_labels, L.mapbox.gridLayer('bluelabs.mk8813o0'),'county_labels', 4);
 
 
   function addLayer(layer, gridlayer, name, zIndex) {
