change marker color

--- a/lvp_map_endorsements.html
+++ b/lvp_map_endorsements.html
@@ -92,7 +92,7 @@ body { margin:0; padding:0; }
           "properties": {
             "title": "Endorsement: Nanette Barragan",
             "description": "CA Congressional District 44",
-            "marker-color": "#2d009f",
+            "marker-color": "#474747",
             "marker-size": "medium"
           }
         },
@@ -106,7 +106,7 @@ body { margin:0; padding:0; }
           "properties": {
             "title": "Endorsement: Salud Carbajal",
             "description": "CA Congressional District 24",
-            "marker-color": "#2d009f",
+            "marker-color": "#474747",
             "marker-size": "medium"
           }
         },
@@ -120,7 +120,7 @@ body { margin:0; padding:0; }
           "properties": {
             "title": "Endorsement: Darren Soto ",
             "description": "FL Congressional District 9",
-            "marker-color": "#2d009f",
+            "marker-color": "#474747",
             "marker-size": "medium"
           }
         },
@@ -134,7 +134,7 @@ body { margin:0; padding:0; }
           "properties": {
             "title": "Endorsement: Pete Gallego",
             "description": "TX Congressional District 23",
-            "marker-color": "#2d009f",
+            "marker-color": "#474747",
             "marker-size": "medium"
           }
         }      
